<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_leave_type_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/alert_leave_type_str"
            android:textColor="#000"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_leave_type_info"
            android:entries="@array/leave_type" />

        <TextView
            android:id="@+id/tv_start_time_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_leave_type_info"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/alert_leave_start_time_str"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_leave_type_info"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/tv_start_time_info"
            android:background="?attr/selectableItemBackground"
            android:textColor="#000"
            android:textSize="16sp"
            tools:text="2019年11月27日" />

        <TextView
            android:id="@+id/tv_end_time_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_start_time_info"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/alert_leave_end_time_str"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_start_time"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/tv_end_time_info"
            android:background="?attr/selectableItemBackground"
            android:textColor="#000"
            android:textSize="16sp"
            tools:text="2019年11月30日" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_end_time"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alert_leave_reason_str"
                android:imeOptions="actionSend" />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>