<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="top.itning.smpandroid.ui.activity.RoomActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        toolbar:title="我的寝室" />

    <com.loopeer.shadow.ShadowView
        android:id="@+id/sv"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:elevation="10dp"
        android:foreground="?attr/selectableItemBackground"
        android:onClick="onShadowClick"
        android:padding="10dp"
        app:backgroundColor="#f0ff6e6e"
        app:cornerRadius="110dp"
        app:shadowColor="#f0ff6e6e"
        app:shadowMargin="20dp"
        app:shadowRadius="50dp">

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="160dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="center_horizontal|bottom"
                android:text="@string/room_title1"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/room_title2"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/tv_last_check_time"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:gravity="center_horizontal|top"
                tools:text="未知"
                android:textColor="#fff" />
        </LinearLayout>
    </com.loopeer.shadow.ShadowView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_address"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/location_waiting" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
